Fix: notes overlap

--- a/css/app.css
+++ b/css/app.css
@@ -496,3 +496,6 @@ div.warning-container {
     padding: 10px;
 }
 
+div.level2 {
+	overflow:hidden;
+}
